Complete Sign Up Route

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,9 +20,11 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express-mongo-sanitize": "^2.1.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
@@ -30,6 +32,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "xss-clean": "^0.1.4"
   }
