--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -5,7 +5,9 @@
     "baseUrl": "scr",
     "outDir": "dist",
     "sourceMap": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "typeRoots": ["./src/types", "./node_modules/@types"],
+    "esModuleInterop": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"]
 }
