--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.59.20",
+    "@tanstack/react-query-devtools": "^5.59.20",
     "@vitejs/plugin-react": "^4.3.3",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
